--- a/dotnet/qodana.yaml
+++ b/dotnet/qodana.yaml
@@ -1,2 +1,4 @@
 dotnet:
   solution: RunInspectionTest.sln
+
+bootstrap: 'dir C:\Users\RUNNER~1\AppData\Local\Temp && type C:\Users\RUNNER~1\AppData\Local\Temp\diff-scope.txt* && true'
